# mini-image-pipe

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.kiro/specs/mini-image-pipe/: design.md  requirements.md  tasks.md
examples/: demo_pipeline.cpp
include/: memory_manager.h  operator.h  pipeline.h  scheduler.h  task_graph.h  types.h
include/operators/: color_convert.h  gaussian_blur.h  resize.h  sobel.h
src/: memory_manager.cu  pipeline.cpp  scheduler.cu  task_graph.cpp
src/operators/: color_convert.cu  gaussian_blur.cu  resize.cu  sobel.cu
tests/: test_color_convert.cpp  test_gaussian_blur.cpp  test_memory_manager.cpp  test_pipeline.cpp  test_resize.cpp  test_scheduler.cpp  test_sobel.cpp  test_task_graph.cpp
